# abyss

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  README_zh.md  RELEASE-NOTES.md  book.toml  install.sh
.claude/: settings.json
.codex/: config.toml
.gemini/: settings.json
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: ARCH-LAYERS.md  DESIGN-v0.2.md  DESIGN-v0.3.md  DOGFOOD.md  EVAL-agent-ab.md  PRINCIPLES.md
docs/book/: SUMMARY.md  changelog.md  introduction.md  roadmap.md
docs/book/ambient/: daemon.md  socket-protocol.md  watch.md
docs/book/architecture/: arch-layers.md  principles.md  resolver-tiers.md
docs/book/daily-use/: callers.md  pre-edit-card.md  search.md  where-context-impact.md
docs/book/dogfood/: django.md  fastapi.md  helix-editor.md  hono.md  index.md  vite.md
docs/book/eval/: method.md  notes-click-microregression.md  notes-django-mro-validation.md  notes-mro-walker.md  results.md
docs/book/getting-started/: agent-hook.md  first-index.md  installing.md
docs/dogfood/: django-2026-06-17.md  fastapi-2026-06-17.md  helix-editor-2026-06-17.md  hono-2026-06-17.md  sqlalchemy-2026-06-17.md  vite-2026-06-17.md
eval/: README.md  RESULTS.md  compare.py  hostile-baseline.txt  hostile-bench-repos.sh  hostile-bigrepos-results.json  hostile-card-sample.json  hostile-concurrent-results.json  hostile-concurrent.sh  hostile-results.json  hostile.sh  run.sh  setup-indexers.sh
eval/agent-ab/: grade.sh  tasks.json
eval/agent-ab-v2/: grade.sh  run.sh  tasks.json
eval/agent-ab/fixture/: go.mod
eval/agent-ab/fixture/api/: handler.go  handler_test.go
eval/agent-ab/fixture/ids/: ids.go  ids_test.go
eval/agent-ab/fixture/money/: format.go  format_test.go
eval/agent-ab/fixture/report/: report.go  report_test.go
eval/agent-ab/fixture/store/: store.go  store_test.go
eval/agent-ab/fixture/util/: clamp.go  clamp_test.go
eval/notes/: click-microregression-2026-06-17.md  click-mro-walker-2026-06-17.md  django-mro-validation-2026-06-17.md  sqlalchemy-mro-validation-2026-06-17.md
npm/: README.md  install.js  package.json
scripts/: release.sh
site/: index.html
src/: config.rs  context.rs  lib.rs  main.rs  manifest.rs
src/arch/: dictionary.rs  entry.rs  graph.rs  inference.rs  mod.rs  naming.rs  override_config.rs
src/attach/: claude.rs  codex.rs  gemini.rs  mod.rs  openclaw.rs
src/commands/: attach.rs  daemon.rs  hooks.rs  index.rs  inspect.rs  mod.rs  proxy.rs  query.rs
src/daemon/: mod.rs  pidfile.rs  socket.rs  state.rs
src/embedding/: mod.rs  model.rs
src/graph/: extractor.rs  mod.rs  query.rs  resolver.rs
src/graph/languages/: bash.rs  c_cpp.rs  go.rs  java.rs  mod.rs  python.rs  rust_lang.rs  typescript.rs
src/indexer/: chunker.rs  mod.rs  parser.rs  pipeline.rs  walker.rs
src/ingest/: mod.rs
src/mcp/: server.rs
src/proxy/: filter.rs  mod.rs  rewrite.rs  runner.rs  tee.rs  tracking.rs
src/proxy/handlers/: build.rs  cargo.rs  docker.rs  git.rs  go.rs  infra.rs  js.rs  kubectl.rs  lint.rs  mod.rs  python.rs  system.rs
src/search/: fulltext.rs  fusion.rs  mod.rs  semantic.rs  symbol.rs
src/storage/: mod.rs  repo.rs  schema.rs
src/temporal/: complexity.rs  coupling.rs  evolution.rs  git_parser.rs  hotspot.rs  mod.rs
src/watcher/: incremental.rs  mod.rs
tests/: arch_ignore_walker.rs  arch_inference.rs  attach_all.rs  attach_codex.rs  attach_gemini.rs  attach_openclaw.rs  callers_exclude_tests.rs  callers_inherits.rs  callers_limit_footer.rs  callers_type_refs.rs  completion_smoke.rs  confidence_gate.rs  config_show.rs  context_perf.rs  cross_language_resolver.rs  daemon_logs_follow.rs  daemon_mcp_socket.rs  daemon_socket.rs  daemon_subscribe.rs  extractors.rs  graph_query.rs  hook_cli.rs  hook_latency.rs  index_since.rs  l4_skip_tests.rs  path_matching.rs  proxy_latency.rs  proxy_smoke.rs  python_mro_receiver.rs  reindex_file_preserves_refs.rs  reset_cli.rs  resolver_tiers.rs  rust_builtin_filter.rs  scip_ingest.rs  search_ranking.rs  skill_manifest.rs  temporal.rs  ts_builtin_filter.rs  watcher_smoke.rs
tests/common/: mod.rs
