[package]
name = "abyss"
version = "0.2.0"
edition = "2024"
description = "Code relationship graph and temporal intelligence CLI"
license = "Apache-2.0"

[[bin]]
name = "abyss"
path = "src/main.rs"

[lib]
name = "code_abyss"
path = "src/lib.rs"

[dependencies]
# MCP protocol
rmcp = { version = "1", features = ["server", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# SQLite + FTS5 + vector
rusqlite = { version = "0.34", features = ["bundled", "blob"] }
sqlite-vec = "0.1"
zerocopy = { version = "0.8", features = ["derive"] }

# Tree-sitter AST parsing
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-yaml = "0.7"
tree-sitter-bash = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
# tree-sitter-markdown uses old API, skip for now

# Embedding inference
fastembed = "4"

# File system
notify = "8"
notify-debouncer-full = "0.5"
ignore = "0.4"
walkdir = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing
blake3 = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Misc
rayon = "1"
num_cpus = "1"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
